[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypiexamplezt0898"
version = "0.0.1"
authors = [
  { name="zt", email="330356463@qq.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zhengtong0898/pypiexample-zt0898"

[tool.setuptools]
packages = ["pypiexamplezt0898"]
